mudança no html

--- a/HTML/MAINPAGE/index.html
+++ b/HTML/MAINPAGE/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="\..\..\../mainsite/CSS/MAINSTYLE/style.css">
+    <link rel="stylesheet" href="https://darcio1.github.io/mainsites/CSS/MAINSTYLE/style.css">
     <title>Document</title>
 </head>
 <body>
