--- a/HTML/MAINPAGE/index.html
+++ b/HTML/MAINPAGE/index.html
@@ -22,9 +22,9 @@
   </div>
 
   <div id="redes-sociais">
-    <a href="WWW.facebook.COM"><img src="..\..\../mainsite/IMG/LOGOS/facebook.png" alt="facebook.com" width="25" height="25" ></a>
-    <a href="WWW.instagram.COM"><img src="..\..\../mainsite/IMG/LOGOS/instagram.png" alt="instagram.com"  width="20" height="20"></a>
-    <a href="www.whatsapp.com"><img src="..\..\../mainsite/IMG/LOGOS/whatsapp.png" alt="whatsapp.com" height="27" width="27" ></a>
+    <a href="WWW.facebook.COM"><img src="https://darcio1.github.io/mainsite/IMG/LOGOS/facebook.png" alt="facebook.com" width="25" height="25" ></a>
+    <a href="WWW.instagram.COM"><img src="https://darcio1.github.io/mainsite/IMG/LOGOS/instagram.png" alt="instagram.com"  width="20" height="20"></a>
+    <a href="www.whatsapp.com"><img src="https://darcio1.github.io/mainsite/IMG/LOGOS/whatsapp.png" alt="whatsapp.com" height="27" width="27" ></a>
 </div>
 
   <Nav>
@@ -41,7 +41,7 @@
 
 <div class="intro">
   <div class="logotipos"><img id="iMG"
-    src="..\..\../mainsite/IMG/LOGOS/logogrande.png"
+    src="https://darcio1.github.io/mainsite/IMG/LOGOS/logogrande.png"
     alt="logotipo" >
   </div>
 
